src/test/deca/context/valid/class/method/use_var.deca
// Description:
//    Déclaration de variable dans les méthodes
//
// Resultats:
//    Aucune erreur
//


class A {
    void a() {
        int b;
        b = 5;
	}
}

{}

