src/test/deca/context/invalid/this_in_main.deca
// Description:
//    Déclaration de variable
//
// Resultats:
//    Ligne 9 : interdit d'utiliser this dans le programme principal
// 

{
   this;
}
